@@ -2,6 +2,7 @@ Release 1.22
 
 #126 LinkRest JSON Path
 #132 Listener param and return type are forced to be BaseLinearProcessingStage instead of ProcessingStage
+#134 LinkRestException logging should include cause message
 
 Release 1.21
 
